--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 
 title: OpenSHA
-description: Open Source Seismic Hazard Analysis
+description: Open-Source Seismic Hazard Analysis
 logo: resources/opensha_logo.png
 show_downloads: false
