--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,4 @@ title: OpenSHA
 description: Open-Source Seismic Hazard Analysis
 logo: resources/opensha_logo.png
 show_downloads: false
+noindex: false
